const express = require('express');
const cors = require('cors');
const path = require('path');
const { WebSocketServer } = require('ws');
const { createServer } = require('http');

const grpc = require('@grpc/grpc-js');
const protoLoader = require('@grpc/proto-loader');

// Configura√ß√£o do servidor Express
const app = express();
const server = createServer(app);
const wss = new WebSocketServer({ server });

// Middleware
app.use(cors());
app.use(express.json());

// Configura√ß√£o do cliente gRPC
const TRACKING_PROTO_PATH = path.resolve(__dirname, '../protos/tracking.proto');
const ETA_PROTO_PATH = path.resolve(__dirname, '../protos/eta.proto');

const trackingPackageDef = protoLoader.loadSync(TRACKING_PROTO_PATH, {
  keepCase: true,
  longs: String,
  enums: String,
  defaults: true,
  oneofs: true
});

const etaPackageDef = protoLoader.loadSync(ETA_PROTO_PATH, {
  keepCase: true,
  longs: String,
  enums: String,
  defaults: true,
  oneofs: true
});

const trackingProto = grpc.loadPackageDefinition(trackingPackageDef);
const etaProto = grpc.loadPackageDefinition(etaPackageDef);

// Clientes gRPC
const trackingClient = new trackingProto.tracking.Tracker('localhost:50051', grpc.credentials.createInsecure());
const etaClient = new etaProto.eta.ETAService('localhost:50052', grpc.credentials.createInsecure());

// Armazenamento em mem√≥ria dos ve√≠culos
const vehiclePositions = new Map();

// Conex√£o WebSocket para atualiza√ß√µes em tempo real
wss.on('connection', (ws) => {
  console.log('üîå Cliente WebSocket conectado');

  // Envia posi√ß√µes atuais ao conectar
  const currentVehicles = Array.from(vehiclePositions.values());
  ws.send(JSON.stringify({
    type: 'vehicles',
    data: currentVehicles
  }));

  ws.on('close', () => {
    console.log('üîå Cliente WebSocket desconectado');
  });

  ws.on('error', (error) => {
    console.error('‚ùå Erro no WebSocket:', error.message);
  });
});

// Fun√ß√£o para broadcast das posi√ß√µes
function broadcastVehiclePositions() {
  const vehicles = Array.from(vehiclePositions.values());
  const message = JSON.stringify({
    type: 'vehicles',
    data: vehicles
  });

  wss.clients.forEach((client) => {
    if (client.readyState === client.OPEN) {
      try {
        client.send(message);
      } catch (error) {
        console.error('‚ùå Erro ao enviar mensagem WebSocket:', error.message);
      }
    }
  });
}

// Monitora ve√≠culos da Central de Rastreamento
function monitorVehicles() {
  setInterval(() => {
    trackingClient.ListVehicles({}, (error, response) => {
      if (error) {
        console.error('‚ùå Erro ao listar ve√≠culos:', error.message);
        return;
      }

      const vehicles = response.vehicles || [];
      let hasUpdates = false;

      vehicles.forEach((vehicle) => {
        if (vehicle.lastPosition) {
          const vehicleData = {
            vehicleId: vehicle.vehicleId,
            lat: vehicle.lastPosition.lat,
            lon: vehicle.lastPosition.lon,
            vel: vehicle.lastPosition.vel,
            timestamp: vehicle.lastPosition.timestamp,
            lastUpdate: Date.now()
          };

          // Verifica se houve mudan√ßa de posi√ß√£o
          const existing = vehiclePositions.get(vehicle.vehicleId);
          if (!existing ||
              existing.lat !== vehicleData.lat ||
              existing.lon !== vehicleData.lon ||
              existing.vel !== vehicleData.vel) {
            vehiclePositions.set(vehicle.vehicleId, vehicleData);
            hasUpdates = true;
          }
        }
      });

      // Remove ve√≠culos offline (sem atualiza√ß√£o h√° mais de 30 segundos)
      const now = Date.now();
      vehiclePositions.forEach((vehicle, vehicleId) => {
        if (now - vehicle.lastUpdate > 30000) {
          vehiclePositions.delete(vehicleId);
          hasUpdates = true;
        }
      });

      // Broadcast se houve atualiza√ß√µes
      if (hasUpdates) {
        broadcastVehiclePositions();
      }
    });
  }, 2000); // Atualiza a cada 2 segundos
}

// Rotas da API

// GET /api/vehicles - Lista todos os ve√≠culos
app.get('/api/vehicles', (req, res) => {
  const vehicles = Array.from(vehiclePositions.values());
  res.json({
    success: true,
    data: vehicles,
    count: vehicles.length
  });
});

// GET /api/vehicles/:id - Obter ve√≠culo espec√≠fico
app.get('/api/vehicles/:id', (req, res) => {
  const vehicleId = req.params.id;
  const vehicle = vehiclePositions.get(vehicleId);

  if (!vehicle) {
    return res.status(404).json({
      success: false,
      message: `Ve√≠culo ${vehicleId} n√£o encontrado`
    });
  }

  res.json({
    success: true,
    data: vehicle
  });
});

// POST /api/eta - Calcular ETA para um ve√≠culo
app.post('/api/eta', (req, res) => {
  const { vehicleId, destinationLat, destinationLon } = req.body;

  if (!vehicleId || !destinationLat || !destinationLon) {
    return res.status(400).json({
      success: false,
      message: 'Par√¢metros obrigat√≥rios: vehicleId, destinationLat, destinationLon'
    });
  }

  const request = {
    vehicleId,
    destinationLat,
    destinationLon
  };

  etaClient.CalculateETA(request, (error, response) => {
    if (error) {
      return res.status(500).json({
        success: false,
        message: error.message
      });
    }

    res.json({
      success: true,
      data: response
    });
  });
});

// POST /api/eta/all - Calcular ETA para todos os ve√≠culos
app.post('/api/eta/all', (req, res) => {
  const { destinationLat, destinationLon } = req.body;

  if (!destinationLat || !destinationLon) {
    return res.status(400).json({
      success: false,
      message: 'Par√¢metros obrigat√≥rios: destinationLat, destinationLon'
    });
  }

  const request = {
    destinationLat,
    destinationLon
  };

  etaClient.GetMultipleETAs(request, (error, response) => {
    if (error) {
      return res.status(500).json({
        success: false,
        message: error.message
      });
    }

    res.json({
      success: true,
      data: response
    });
  });
});

// GET /api/status - Status da aplica√ß√£o
app.get('/api/status', (req, res) => {
  res.json({
    success: true,
    status: 'online',
    connectedVehicles: vehiclePositions.size,
    websocketClients: wss.clients.size,
    timestamp: new Date().toISOString()
  });
});

// Rota de teste
app.get('/api/test', (req, res) => {
  res.json({
    success: true,
    message: 'API Gateway funcionando!',
    timestamp: new Date().toISOString()
  });
});

// Middleware de erro
app.use((err, req, res, next) => {
  console.error('‚ùå Erro na API:', err);
  res.status(500).json({
    success: false,
    message: 'Erro interno do servidor'
  });
});

// Iniciar servidor
const PORT = process.env.PORT || 3001;

server.listen(PORT, () => {
  console.log('üåê Express gRPC Gateway iniciado!');
  console.log(`üì° Servidor HTTP rodando na porta: ${PORT}`);
  console.log(`üîå WebSocket servidor iniciado na porta: ${PORT}`);
  console.log('üîó Endpoints dispon√≠veis:');
  console.log(`   GET  http://localhost:${PORT}/api/vehicles`);
  console.log(`   GET  http://localhost:${PORT}/api/vehicles/:id`);
  console.log(`   POST http://localhost:${PORT}/api/eta`);
  console.log(`   POST http://localhost:${PORT}/api/eta/all`);
  console.log(`   GET  http://localhost:${PORT}/api/status`);
  console.log(`   WS   ws://localhost:${PORT}`);
  console.log('='.repeat(50));

  // Inicia o monitoramento de ve√≠culos
  monitorVehicles();
});

module.exports = app;